# BSU_CanSAT

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/BME280/: BME280.cpp
lib/BME280/include/: BME280.h  BME280Reg.h
lib/GPS/: CMakeLists.txt  m100Mini.cpp
lib/GPS/include/: m100Mini.h
lib/ICM20948/: CMakeLists.txt  ICM20948.cpp
lib/ICM20948/include/: ICM20948.h
lib/PCF8574/: PCF8574.cpp
lib/SX1276/: CMakeLists.txt  sx1276.cpp
lib/SX1276/include/: sx1276.h
lib/Telemetry/: CMakeLists.txt
lib/Telemetry/include/: Telemetry.h
lib/loraPacket/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
